// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Tabs base demo works fine 1`] = `
<base>
  <t-tabs
    defaultValue="{{0}}"
    tClass="custom-tabs"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="标签页一"
      value="0"
    />
    <t-tab-panel
      label="标签页二"
      value="1"
    />
  </t-tabs>
  <t-tabs
    defaultValue="{{0}}"
    tClass="custom-tabs"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="标签页一"
      value="0"
    />
    <t-tab-panel
      label="标签页二"
      value="1"
    />
    <t-tab-panel
      label="标签页三"
      value="2"
    />
  </t-tabs>
  <t-tabs
    defaultValue="{{0}}"
    sticky="{{true}}"
    stickyProps="{{
      Object {
        "zIndex": 2,
      }
    }}"
    tClass="custom-tabs"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
    bind:scroll="onStickyScroll"
  >
    <t-tab-panel
      label="标签页一"
      value="0"
    />
    <t-tab-panel
      label="标签页二"
      value="1"
    />
    <t-tab-panel
      label="标签页三"
      value="2"
    />
    <t-tab-panel
      label="标签页四"
      value="3"
    />
  </t-tabs>
</base>
`;

exports[`Tabs Tabs scroll demo works fine 1`] = `
<scroll>
  <t-tabs
    defaultValue="{{0}}"
    spaceEvenly="{{false}}"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
    <t-tab-panel
      label="选项"
      value="{{4}}"
    />
    <t-tab-panel
      label="选项"
      value="{{5}}"
    />
    <t-tab-panel
      label="选项"
      value="{{6}}"
    />
    <t-tab-panel
      label="选项"
      value="{{7}}"
    />
  </t-tabs>
</scroll>
`;

exports[`Tabs Tabs size demo works fine 1`] = `
<size>
  <t-tabs
    defaultValue="{{0}}"
  >
    <t-tab-panel
      label="小尺寸"
      value="0"
    />
    <t-tab-panel
      label="标签页二"
      value="1"
    />
    <t-tab-panel
      label="标签页三"
      value="2"
    />
    <t-tab-panel
      label="标签页四"
      value="3"
    />
  </t-tabs>
  <wx-view
    style="height: 16px"
  />
  <t-tabs
    defaultValue="{{0}}"
    tClassActive="active-item"
  >
    <t-tab-panel
      label="大尺寸"
      value="0"
    />
    <t-tab-panel
      label="标签页二"
      value="1"
    />
    <t-tab-panel
      label="标签页三"
      value="2"
    />
    <t-tab-panel
      label="标签页四"
      value="3"
    />
  </t-tabs>
</size>
`;

exports[`Tabs Tabs status demo works fine 1`] = `
<status>
  <t-tabs
    defaultValue="0"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="标签页一"
      value="0"
    />
    <t-tab-panel
      label="标签页二"
      value="1"
    />
    <t-tab-panel
      disabled="{{true}}"
      label="禁用状态"
      value="2"
    />
  </t-tabs>
</status>
`;

exports[`Tabs Tabs theme demo works fine 1`] = `
<theme>
  <t-tabs
    defaultValue="{{0}}"
    theme="tag"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
  </t-tabs>
  <wx-view
    style="height: 16px"
  />
  <t-tabs
    defaultValue="{{0}}"
    spaceEvenly="{{false}}"
    theme="tag"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
    <t-tab-panel
      label="选项"
      value="{{4}}"
    />
    <t-tab-panel
      label="选项"
      value="{{5}}"
    />
    <t-tab-panel
      label="选项"
      value="{{6}}"
    />
    <t-tab-panel
      label="选项"
      value="{{7}}"
    />
  </t-tabs>
  <wx-view
    style="height: 16px"
  />
  <t-tabs
    defaultValue="{{0}}"
    theme="card"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
  </t-tabs>
  <wx-view
    style="height: 16px"
  />
  <t-tabs
    defaultValue="{{0}}"
    spaceEvenly="{{false}}"
    theme="card"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
    <t-tab-panel
      label="选项"
      value="{{4}}"
    />
    <t-tab-panel
      label="选项"
      value="{{5}}"
    />
    <t-tab-panel
      label="选项"
      value="{{6}}"
    />
    <t-tab-panel
      label="选项"
      value="{{7}}"
    />
  </t-tabs>
</theme>
`;

exports[`Tabs Tabs vertical demo works fine 1`] = `
<vertical>
  <t-tabs
    defaultValue="{{1}}"
    placement="left"
    tClass="custom-tabs-vertical"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="标签页一"
      value="0"
    >
      <wx-view
        class="tab-content"
      >
        标签一内容区
      </wx-view>
    </t-tab-panel>
    <t-tab-panel
      label="标签页二"
      value="1"
    >
      <wx-view
        class="tab-content"
      >
        标签二内容区
      </wx-view>
    </t-tab-panel>
    <t-tab-panel
      label="标签页三"
      value="2"
    >
      <wx-view
        class="tab-content"
      >
        标签三内容区
      </wx-view>
    </t-tab-panel>
    <t-tab-panel
      label="标签页四"
      value="3"
    >
      <wx-view
        class="tab-content"
      >
        标签四内容区
      </wx-view>
    </t-tab-panel>
    <t-tab-panel
      label="标签页五"
      value="4"
    >
      <wx-view
        class="tab-content"
      >
        标签五内容区
      </wx-view>
    </t-tab-panel>
  </t-tabs>
</vertical>
`;

exports[`Tabs Tabs with-badge demo works fine 1`] = `
<with-badge>
  <t-tabs
    defaultValue="{{0}}"
  >
    <t-tab-panel
      badgeProps="{{
        Object {
          "dot": true,
        }
      }}"
      label="选项"
      value="0"
    />
    <t-tab-panel
      badgeProps="{{
        Object {
          "count": 8,
        }
      }}"
      label="选项"
      value="1"
    />
    <t-tab-panel
      label="选项"
      value="2"
    />
  </t-tabs>
</with-badge>
`;

exports[`Tabs Tabs with-content demo works fine 1`] = `
<with-content>
  <t-tabs
    animation=""
    defaultValue="{{0}}"
    tClass="custom-tabs"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="标签页一"
      value="0"
    >
      标签一内容
    </t-tab-panel>
    <t-tab-panel
      label="标签页二"
      value="1"
    >
      标签二内容
    </t-tab-panel>
    <t-tab-panel
      label="标签页三"
      value="2"
    >
      标签三内容
    </t-tab-panel>
    <t-tab-panel
      label="标签页四"
      value="3"
    >
      标签四内容
    </t-tab-panel>
  </t-tabs>
</with-content>
`;
